# Scouter

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ActionPanel.jsx  ActiveSet.jsx  Card.jsx  GameBoard.jsx  Hand.jsx  HistoryPanel.jsx  LobbyScreen.jsx  RlDashboard.jsx  RoundSummary.jsx  ScorePanel.jsx
frontend/src/hooks/: useGameSocket.js
frontend/src/styles/: game.css
frontend/src/utils/: actionEncoding.js
rules/: extra_2p_rules.md
scouter/api/: game_manager.py  rl_monitor.py  server.py
scouter/env/: card.py  game_logic.py  scout_env.py
scouter/rl/: action_parser.py  agent_pool.py  evolution_eval.py  grpo_rollout.py  langgraph_agent.py  metrics.py  obs_formatter.py  rllib_wrapper.py
scripts/: deploy_agent.py  profile_eval_runtime.py  run_overnight_stability_sweep.sh  run_train_eval_stability.sh  start_monitoring_stack.sh  summarize_overnight_sweep.py  train_ppo.py  validate.py
tests/: test_card.py  test_game_logic.py  test_game_manager.py  test_metrics.py  test_rl_interfaces.py  test_rl_monitor_api.py  test_rllib_wrapper.py  test_scout_env.py
todos/: traditional_rl_integration_plan.md
