[project]
name = "scouter"
version = "0.1.0"
description = "Scout card game: PettingZoo AEC env + RL training hooks + interactive web UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pettingzoo>=1.25.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "pytest>=9.0.2",
    "ray[rllib]>=2.54.0",
    "torch>=2.10.0",
    "tensorboard>=2.20.0",
    "httpx>=0.28.1",
    "py-spy>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
rl = [
    "ray[rllib]>=2.10",
    "trl>=0.8",
    "langgraph>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "setuptools<81",
    "tensorboard>=2.20.0",
]
